cmake_minimum_required(VERSION 3.17)
project(Exercise02)

set(CMAKE_CXX_STANDARD 20)


add_executable(Exercise02.1 Task01/Task01.cpp)
add_executable(Exercise02.2 Task02/Task02.cpp)
add_executable(Exercise02.3 Task03/Task03.cpp)
add_executable(Exercise02.4 Task04/Task04.cpp)
add_executable(Exercise02.5 Task05/Task05.cpp)

