cmake_minimum_required(VERSION 3.17)
project(Exercise04)

set(CMAKE_CXX_STANDARD 20)

add_executable(Exercise04 main.cpp)
add_executable(Exercise04.2 Task02/Source.cpp)
add_executable(Exercise04.3 Task03/Source.cpp)
add_executable(Exercise04.4 Task05/Source.cpp)
add_executable(Exercise04.5 Task04/Source.cpp)