cmake_minimum_required(VERSION 3.17)
project(Exercise05)

set(CMAKE_CXX_STANDARD 20)

add_executable(Exercise05 main.cpp)
add_executable(Exercise05.1 Task01/Source.cpp)
add_executable(Exercise05.2 Task02/Source.cpp)
add_executable(Exercise05.3 Task03/Source.cpp)
add_executable(Exercise05.4 Task04/Source.cpp)
add_executable(Exercise05.5 Task05/Source.cpp)
